启动图案修改

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Frame</title>
+    <title>BSTMS</title>
     <!--[if lt IE 9]>
     <meta http-equiv="refresh" content="0;ie.html" />
     <![endif]-->
@@ -24,14 +24,19 @@
                                 <span class="clear">
                                     <span class="block m-t-xs" style="font-size:20px;">
                                         <i class="fa fa-area-chart"></i>
-                                        <strong class="font-bold">Frame</strong>
+                                        <strong class="font-bold">BSTM</strong>
                                     </span>
                                 </span>
                             </a>
                         </div>
                     </li>
                     <!--此处注入功能选项-->
-
+                    <li>
+                        <a class="J_menuItem" href="/homepage/">
+                            <i class="fa fa-home"></i>
+                            <span class="nav-label">首页</span>
+                        </a>
+                    </li>
                     <div hidden id="leftPage" th:utext="${session.user_auth}"></div>
                 </ul>
             </div>
@@ -68,7 +73,7 @@
                 </nav>
             </div>
             <div class="row J_mainContent" id="content-main">
-                <iframe id="J_iframe" width="100%" height="100%" src="" frameborder="0" data-id="" seamless></iframe>
+                <iframe id="J_iframe" width="100%" height="100%" src="/homepage/" frameborder="0" data-id="" seamless></iframe>
             </div>
         </div>
         <!--右侧部分结束-->
