--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,9 +7,22 @@
     <meta http-equiv="refresh" content="0;ie.html" />
     <![endif]-->
     <script>if(window.top !== window.self){ window.top.location = window.location;}</script>
+    <style type="text/css">
+        body {
+            background-image: url(../photo/a7.jpg);
+            color: #D6D6D6;
+            background-size: 100% 100%;
+            background-attachment: fixed;
+            text-align: left;
+            background-repeat: no-repeat;
+        }
+    </style>
 </head>
 <!--引入通用JS、css资源-->
 <body class="gray-bg">
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
     <div th:replace="common/staticImport :: common_resource"></div>
     <div class="middle-box text-center loginscreen  animated fadeInDown">
         <div>
@@ -19,10 +32,10 @@
             </div>
             <h3>银行自助终端系统</h3>
                 <div class="form-group">
-                    <input type="text" name="username" id="username" class="form-control" >
+                    卡号:<input type="text" name="username" id="username" class="form-control" >
                 </div>
                 <div class="form-group">
-                    <input type="password" name="passwords" id="passwords" class="form-control">
+                    密码:<input type="password" name="passwords" id="passwords" class="form-control">
                 </div>
                 <button onclick="userLogin()" class="btn btn-primary block full-width m-b">登 录</button>
             <a class="close-link" data-toggle='modal' data-target='#myModal5' onclick="register()"><h3>开户</h3></a>
