--- a/src/main/resources/templates/bt/balance.html
+++ b/src/main/resources/templates/bt/balance.html
@@ -40,6 +40,10 @@
             余额:
         </h3>
         <h1 class="m-xs" id="money"></h1>
+        <h3 class="font-bold no-margins">
+            信用额度:
+        </h3>
+        <h1 class="m-xs" id="money1">6000.00</h1>
     </div>
     <button type="button" class="btn btn-primary btn-lg" onclick="JavaScript :history.back(1);">返回首页</button>
 </div>
